added new components

--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -1,6 +1,10 @@
 :root {
-     --blue-btn: #3470ff;
-     --blue-btn-hover: #0b44cd;
-     --white: rgba(255, 255, 255, 1);
+  --blue-btn: #3470ff;
+  --blue-btn-hover: #0b44cd;
+  --white: rgba(255, 255, 255, 1);
+  --wave-hover: rgba(49, 208, 170, 1);
+  --navy-blue: rgba(46, 47, 66, 1);
+  --flowers:rgba(231, 233, 252, 1);
+
 
 }
