--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -6,6 +6,29 @@ body {
   font-family: "Manrope", sans-serif;
   background-color: var(--white);
 }
+
+h3 {
+     font-size: 14px;
+}
+
+p {
+     font-size: 12px;
+     font-weight: 400;
+}
+
+p,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0px;
+  padding: 0px;
+}
+
+
+
+
 /* 
 .hide {
   display: none;
