--- a/src/components/TestimonialCarousel/TestimonialCarousel.module.css
+++ b/src/components/TestimonialCarousel/TestimonialCarousel.module.css
@@ -25,7 +25,7 @@
    
    .text {
      font-size: 16px;
-     color: var(--dark-blue);
+     color: var(--navy-blue);
      margin-bottom: 10px;
    }
    
