--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -5,6 +5,8 @@
   --wave-hover: rgba(49, 208, 170, 1);
   --navy-blue: rgba(46, 47, 66, 1);
   --flowers:rgba(231, 233, 252, 1);
+  --yellow: #eeb60b;
+  --light-grey: rgb(151 152 162);
 
 
 }
