--- a/src/components/FeedbackForm/FeedbackForm.module.css
+++ b/src/components/FeedbackForm/FeedbackForm.module.css
@@ -20,7 +20,7 @@
    .feedbackForm h2 {
      font-size: 24px;
      font-weight: 700;
-     color: var(--dark-blue);
+     color: var(--navy-blue);
      margin-bottom: 20px;
    }
    
@@ -31,7 +31,7 @@
    .formGroup label {
      display: block;
      font-size: 16px;
-     color: var(--dark-grey);
+     color: var(--navy-blue);
      margin-bottom: 5px;
    }
    
@@ -61,6 +61,6 @@
    }
    
    .submitButton:hover {
-     background-color: var(--dark-blue);
+     background-color: var(--navy-blue);
    }
    
