--- a/src/components/SupportUkraine/SupportUkraine.module.css
+++ b/src/components/SupportUkraine/SupportUkraine.module.css
@@ -1,31 +1,34 @@
 /* src/components/SupportUkraine/SupportUkraine.module.css */
 
 .supportSection {
-     background-color: var(--light-blue);
+     background-color: #f5f5f5;
      padding: 20px;
      border-radius: 8px;
+     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
      text-align: center;
-     margin: 20px 0;
+     margin: 32px;
    }
    
    .title {
-     font-size: 24px;
-     font-weight: 700;
-     color: var(--dark-blue);
+     font-size: 18px;
+     font-weight: bold;
+     color: var(--blue-btn);
      margin-bottom: 10px;
+     margin-top: 10px;
    }
    
    .description {
-     font-size: 16px;
-     color: var(--dark-grey);
-     margin-bottom: 20px;
+     font-size: 14px;
+     font-weight: 600;
+     color: var(--light-grey);
+     margin-bottom: 26px;
    }
    
    .donationLink {
-     font-size: 18px;
-     font-weight: 400;
-     border: 1px solid var(--navy-blue);
-     color: var(--navy-blue);
+     font-size: 16px;
+     font-weight: 800;
+     background-color: var(--yellow);
+     color: var(--blue-btn);
      text-decoration: none;
      padding: 10px 20px;
      border-radius: 15px;
@@ -67,7 +70,23 @@
    
    .marqueeItem {
      font-size: 16px;
-     color: var(--dark-grey);
-     white-space: nowrap;
+     color: var(--navy-blue);
+     font-weight: 600;
    }
+
+   .marqueeItem {
+
+     line-height: 1.5;
+     color: var(--yellow);
+   }
+   
+ 
+   
+   .support {
+     font-size: 18px;
+     font-weight: 800;
+     color: var(--blue-btn);
+   }
+   
+   
    
