--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -18,4 +18,10 @@
      font-weight: 500;
      src: url("./fonts/Manrope-Medium.ttf") format("truetype");
    }
-   
+
+   @font-face {
+    font-family: "Manrope";
+    font-style: normal;
+    font-weight: 800;
+    src: url("./fonts/Manrope-ExtraBold.ttf") format("truetype");
+   }
