--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -6,7 +6,9 @@
   --navy-blue: rgba(46, 47, 66, 1);
   --flowers:rgba(231, 233, 252, 1);
   --yellow: #eeb60b;
-  --light-grey: rgb(151 152 162);
+  --light-grey: rgb(82, 82, 86);
+  --white-grey: #f5f5f5;
+  --shadow: rgba(0, 0, 0, 0.1);
 
 
 }
