--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -3,7 +3,7 @@
   --blue-btn-hover: #0b44cd;
   --white: rgba(255, 255, 255, 1);
   --wave-hover: rgba(49, 208, 170, 1);
-  --navy-blue: rgba(46, 47, 66, 1);
+  --navy-blue: rgb(11 52 101);
   --flowers:rgba(231, 233, 252, 1);
   --yellow: #eeb60b;
   --light-grey: rgb(82, 82, 86);
