--- a/src/components/PromotionsSection/PromotionsSection.module.css
+++ b/src/components/PromotionsSection/PromotionsSection.module.css
@@ -22,30 +22,35 @@
 }
 
 .promotionCard h3 {
-  font-size: 20px;
+  font-size: 18px;
+
   margin-bottom: 10px;
-  color: #333;
+  color: var(--blue-btn);
+  text-align: center;
 }
 
 .promotionCard p {
-  font-size: 16px;
+  font-size: 14px;
+  text-align: center;
   color: #666;
   margin-bottom: 15px;
 }
 
 .promotionCard .learnMore {
-  display: inline-block;
-  font-size: 16px;
-  padding: 8px 16px;
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
+  margin: 0 auto ;
+  padding: 10px 20px;
+  font-size: 14px;
+  background-color: var(--blue-btn);
+  color: var(--white);
+  border-radius: 15px;
+  text-decoration: none;
+  transition: background-color 0.3s ease, color 0.3s ease;
+
 }
 
+
 .promotionCard .learnMore:hover {
-  background-color: #0056b3;
+  background-color: var(--blue-btn-hover);
 }
 
 .modalOverlay {
