--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,12 +1,31 @@
 .homePage {
-     text-align: center;
-   }
+  text-align: center;
+}
+
+.titleHome {
+  font-size: 32px;
+  text-align: center;
+  font-weight: 800;
+  color: var(--blue-btn);
+  margin: 32px;
+}
+
+.titleAcent {
+  color: var(--yellow);
+}
+
+@media screen and (min-width: 768px) {
+  .titleHome {
+    font-size: 36px;
+    margin: 0 auto;
+    width: 50%;
+  }
+}
    
-   .titleHome {
-    font-size: 18px;
-    text-align: center;
-    font-weight: 100;
-    columns: var(--navy-blue);
-   }
-   
-   
+@media screen and (min-width: 1280px) {
+  .titleHome {
+    font-size: 40px;
+    margin: 0 auto;
+    width: 30%;
+  }
+}
