--- a/src/components/TestimonialCarousel/TestimonialCarousel.module.css
+++ b/src/components/TestimonialCarousel/TestimonialCarousel.module.css
@@ -1,36 +1,41 @@
 .carousel {
-     display: flex;
-     overflow-x: auto;
-     scroll-snap-type: x mandatory;
-     gap: 30px;
-     padding: 20px;
-     background-color: var(--light-grey);
-     border-radius: 8px;
-     margin-top: 40px;
+  display: flex;
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+  gap: 20px;
+  padding: 20px;
+  margin: 32px;
+  /* background-color: rgb(245 245 245); */
+  border-radius: 20px;
+  /* margin-top: 40px; */
+  align-content: flex-start;
+  justify-content: space-evenly;
    }
    
    .testimonial {
-     scroll-snap-align: start;
-     min-width: 300px;
-     padding: 20px;
-     background-color: var(--white);
-     border-radius: 8px;
-     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-     transition: transform 0.3s ease-in-out;
+    scroll-snap-align: start;
+    min-width: 200px;
+    min-height: 80px;
+    padding: 20px;
+    background-color: var(--white-grey);
+    border-radius: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease-in-out;
    }
    
    .testimonial:hover {
-     transform: scale(1.05);
+    transform: scale(1.06);
    }
    
    .text {
-     font-size: 16px;
+     font-size: 14px;
      color: var(--navy-blue);
      margin-bottom: 10px;
    }
    
    .author {
+    font-weight: 800;
      font-size: 14px;
-     color: var(--grey);
+     color: var(--blue-btn);
    }
    
