--- a/src/components/CarCard/CarCard.module.css
+++ b/src/components/CarCard/CarCard.module.css
@@ -3,13 +3,10 @@
 .carCard {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: space-between;
-  width: 300px; /* Додаємо фіксовану ширину для карточки */
+  width: 300px;
   padding: 20px;
-  border-radius: 10px;
-  background-color: #f9f9f9; /* Змінюємо колір фону */
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
 }
 
 .carCard img {
@@ -23,10 +20,6 @@
 
 .details {
   width: 100%; /* Робимо деталі всю ширину карточки */
-}
-
-h2, p {
-  margin: 5px 0; /* Задаємо зовнішній відступ для текстових елементів */
 }
 
 button {
@@ -46,4 +39,24 @@ button {
 
 .favorite {
   color: #ff0000; /* Колір тексту для улюбленої машини */
+}
+
+
+/*  */
+
+.descriptionCard {
+font-size: 12px;
+font-weight: 400;
+line-height: 18px;
+text-align: left;
+color: var(--light-grey);
+}
+
+.titleCard {
+
+font-size: 16px;
+font-weight: 500;
+line-height: 24px;
+text-align: left;
+color: var(--light-grey);
 }
