--- a/src/components/FeedbackForm/FeedbackForm.module.css
+++ b/src/components/FeedbackForm/FeedbackForm.module.css
@@ -5,66 +5,73 @@
 }
 
 @media screen and (min-width: 768px) {
-  /* src/components/FeedbackForm/FeedbackForm.module.css */
-
   .feedbackFormContainer {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 20px;
-    width: 100%;
+    z-index: 999;
+    /* background-color: rgba(0, 0, 0, 0.75); */
   }
 
   .feedbackForm {
     background-color: var(--white);
-    padding: 20px;
-    border-radius: 8px;
+    padding: 40px;
+    border-radius: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    max-width: 500px;
+    max-width: 600px;
+    width: 100%;
     margin: 0 auto;
   }
 
   .feedbackForm h2 {
     font-size: 24px;
     font-weight: 700;
-    color: var(--navy-blue);
+    color: var(--blue-btn);
     margin-bottom: 20px;
+    text-align: center;
   }
 
   .formGroup {
-    margin-bottom: 15px;
+    margin-bottom: 20px;
   }
 
   .formGroup label {
-    display: block;
-    font-size: 16px;
-    color: var(--navy-blue);
+    font-size: 18px;
+    color: var(--blue-btn);
     margin-bottom: 5px;
+    display: block;
   }
 
   .formGroup input,
   .formGroup textarea {
     width: 100%;
-    padding: 10px;
-    border: 1px solid var(--light-grey);
-    border-radius: 5px;
-    font-size: 14px;
+    padding: 15px;
+    border: 1px solid var(--blue-btn);
+    border-radius: 12px;
+    font-size: 16px;
+    margin-top: 5px;
   }
 
   .formGroup textarea {
-    resize: vertical;
-    min-height: 100px;
+    resize: none;
+    min-height: 150px;
   }
 
   .submitButton {
+    margin-bottom: 10px;
+    padding: 10px 20px;
+    font-size: 14px;
     background-color: var(--blue-btn);
     color: var(--white);
-    border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-    transition: background-color 0.3s ease;
+    border-radius: 15px;
+    text-decoration: none;
+    transition: background-color 0.3s ease, color 0.3s ease;
+    margin: 0 auto;
   }
 
   .submitButton:hover {
