--- a/src/components/Map/Map.module.css
+++ b/src/components/Map/Map.module.css
@@ -1,77 +1,88 @@
 .mapContainer {
-  display: none;}
+  display: none;
+}
 
 @media screen and (min-width: 768px) {
-
   /* src/components/Map/Map.module.css */
 
-.mapContainer {
-  display: flex;
-  justify-content: flex-end; /* Розміщення кнопки праворуч */}
+  .mapContainer {
+    display: flex;
+    justify-content: flex-end; /* Розміщення кнопки праворуч */
+  }
 
-.toggleButton {
-  display: flex;
-  align-items: center;
-  display: flex;
-  margin: 0 auto;
-  padding: 10px 20px;
-  font-size: 14px;
-  background-color: var(--blue-btn);
-  color: var(--white);
-  border-radius: 15px;
-  text-decoration: none;
-  transition: background-color 0.3s ease, color 0.3s ease;
-}
+  .popupContent {
+    font-size: 14px;
+    color: var(--blue-btn);
+    font-weight: 800;
+    text-align: center;
+  }
 
-.toggleButton:hover {
-  background-color: var(--blue-btn-hover);
-}
-   
-.icon {
-  font-size: 14px;
-  margin-right: 10px;
-}
+  .toggleButton {
+    display: flex;
+    align-items: center;
+    display: flex;
+    margin: 0 auto;
+    padding: 10px 20px;
+    font-size: 14px;
+    background-color: var(--blue-btn);
+    color: var(--white);
+    border-radius: 15px;
+    text-decoration: none;
+    transition: background-color 0.3s ease, color 0.3s ease;
+  }
 
-.modalMap {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Півпрозорий чорний фон */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 1000;
-}
+  .toggleButton:hover {
+    background-color: var(--blue-btn-hover);
+  }
 
-.mapContent {
-  border-radius: 10px;
-  max-width: 90%;
-  max-height: 90%;
-  overflow-y: auto;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
+  .icon {
+    font-size: 14px;
+    margin-right: 10px;
+  }
 
-.closeButton {
-  position: absolute;
-  top: 32px;
-  right: 32px;
-  background: none;
-  border: none;
-  font-size: 30px;
-  cursor: pointer;
-  color: var(--white); 
-}
+  .modalMap {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Півпрозорий чорний фон */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+  }
 
-.map {
-  width: 500px; /* Розміри картки */
-  height: 500px; /* Розміри картки */
-  border-radius: 10px;
-}
+  .mapContent {
+    display: flex;
+    border-radius: 10px;
+    max-width: 90%;
+    max-height: 90%;
+    overflow-y: auto;
+    /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
+    flex-direction: column;
+    align-items: flex-end;
+    gap: -30px;
+  }
 
-.closeButton:hover {
-  color: var(--wave-hover);
-}
+  .closeButton {
+    margin-bottom: 10px;
+    padding: 10px 20px;
+    font-size: 14px;
+    background-color: var(--blue-btn);
+    color: var(--white-grey);
+    border-radius: 15px;
+    text-decoration: none;
+    transition: background-color 0.3s ease, color 0.3s ease;
+  }
 
+  .closeButton:hover {
+    background-color: var(--blue-btn-hover);
+  }
+
+  .map {
+    width: 500px; /* Розміри картки */
+    height: 500px; /* Розміри картки */
+    border-radius: 10px;
+  }
 }
