--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -21,7 +21,8 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+button {
   margin: 0px;
   padding: 0px;
 }
@@ -29,7 +30,7 @@ h6 {
 
 
 
-/* 
+
 .hide {
   display: none;
 }
@@ -49,4 +50,4 @@ select:-webkit-autofill:focus {
   caret-color: rgba(255, 255, 255, 0.659);
   -webkit-box-shadow: transparent;
   transition: background-color 5000s ease-in-out 0s;
-} */
+} 
