--- a/src/components/CarList/CarList.module.css
+++ b/src/components/CarList/CarList.module.css
@@ -1,25 +1,23 @@
 /* src/components/CarList/CarList.module.css */
 
 .carList {
-     display: flex;
-     flex-wrap: wrap;
-     gap: 20px;
-     justify-content: center;
-     padding: 32px;
-   }
-   
-   .carList {
-     flex: 1 1 calc(25% - 40px); /* Four columns with 20px gap */
-     /* max-width: calc(25% - 40px); */
-     min-width: 200px; /* Adjust as needed to ensure a good fit */
-     box-sizing: border-box;
-   }
-   
-   
-   @media (max-width: 768px) {
-     .carList  {
-       flex: 1 1 100%; /* One column */
-       max-width: 100%;
-     }
-   }
-   
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+  padding: 32px;
+}
+
+.loadMoreButton {
+  display: flex;
+  margin-top: 30px;
+  padding: 10px 20px;
+  font-size: 14px;
+  color: var(--blue-btn);
+  /* text-decoration: none; */
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.loadMoreButton:hover {
+  color: var(--blue-btn-hover);
+}
