--- a/src/components/CarDetailsModal/CarDetailsModal.module.css
+++ b/src/components/CarDetailsModal/CarDetailsModal.module.css
@@ -1,56 +1,67 @@
 /* CarDetailsModal.module.css */
 
 .modal {
-     position: absolute;
-     top: 50%;
-     left: 50%;
-     transform: translate(-50%, -50%);
-     background-color: #fff;
-     padding: 20px;
-     border-radius: 8px;
-     outline: none;
-   }
-   
-   .overlay {
-     position: fixed;
-     top: 0;
-     left: 0;
-     right: 0;
-     bottom: 0;
-     background-color: rgba(0, 0, 0, 0.7);
-   }
-   
-   .container {
-     position: relative;
-   }
-   
-   .closeButton {
-     position: absolute;
-     top: 0;
-     right: 0;
-     padding: 8px;
-     font-size: 20px;
-     background: none;
-     border: none;
-     cursor: pointer;
-   }
-   
-   .image {
-     width: 100%;
-     height: auto;
-     object-fit: cover;
-     border-radius: 8px;
-   }
-   
-   .details {
-     margin-top: 20px;
-   }
-   
-   .details h2 {
-     margin-top: 0;
-   }
-   
-   .details p {
-     margin: 8px 0;
-   }
-   
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #ffffff;
+  padding: 20px;
+  border-radius: 8px;
+  outline: none;
+  max-width: 80%; /* змініть за потребою */
+  max-height: 80%; /* змініть за потребою */
+  overflow-y: auto; /* додати прокрутку при потребі */
+  z-index: 1000; /* змініть за потребою */
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5); /* прозорість оверлею */
+  z-index: 999; /* змініть за потребою, менше ніж модальне вікно */
+}
+
+.modalContent {
+  position: relative;
+}
+
+.closeButton {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  padding: 8px;
+  font-size: 20px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  color: #000000;
+}
+
+.carImg {
+  width: 461px;
+height: 248px;
+top: 40px;
+left: 40px;
+gap: 0px;
+border-radius: 14px 0px 0px 0px;
+opacity: 0px;
+
+  object-fit: cover;
+  border-radius: 8px;
+}
+
+.details {
+  margin-top: 20px;
+}
+
+.details h2 {
+  margin-top: 0;
+}
+
+.details p {
+  margin: 8px 0;
+}
