--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -2,7 +2,7 @@
   --blue-btn: #3470ff;
   --blue-btn-hover: #0b44cd;
   --white: rgba(255, 255, 255, 1);
-  --wave-hover: rgba(49, 208, 170, 1);
+  --wave-hover: #31d0aa;
   --navy-blue: rgb(11 52 101);
   --flowers: rgba(231, 233, 252, 1);
   --yellow: #eeb60b;
