--- a/src/components/SearchFilter/SearchFilter.module.css
+++ b/src/components/SearchFilter/SearchFilter.module.css
@@ -1,1 +1,47 @@
-
+.filters {
+     margin: 16px;
+ }
+ 
+ .dropdown {
+     position: relative;
+     width: 300px;
+     margin: auto;
+ }
+ 
+ .container {
+     position: relative;
+ }
+ 
+ .input {
+     width: 100%;
+     padding: 10px;
+     border: none;
+     border-bottom: 1px solid #ccc;
+     outline: none;
+     font-family: inherit;
+     font-size: inherit;
+     font-weight: inherit;
+     color: inherit;
+ }
+ 
+ .suggestionsContainer {
+     /* position: absolute; */
+     top: calc(100% + 4px);
+     z-index: 1;
+     width: 100%;
+     background-color: #ffffff;
+     border-radius: 4px;
+     box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
+     border: 1px solid #e0e0e0;
+ }
+ 
+ .suggestion {
+     cursor: pointer;
+     padding: 8px;
+     border-bottom: 1px solid #e0e0e0;
+ }
+ 
+ .suggestionHighlighted {
+     background-color: #f5f5f5;
+ }
+ 
