--- a/src/components/SearchFilter/SearchFilter.module.css
+++ b/src/components/SearchFilter/SearchFilter.module.css
@@ -1,47 +1,65 @@
+/* SearchFilter.module.css */
 .filters {
      margin: 16px;
- }
- 
- .dropdown {
+   }
+
+   .form {
+     display: flex;
+     align-items: flex-end;
+     justify-content: space-around;
+}
+   
+   
+   .dropdown {
      position: relative;
      width: 300px;
      margin: auto;
- }
- 
- .container {
+     margin: 0;
+     padding: 0;
+   }
+   
+   .container {
      position: relative;
- }
- 
- .input {
-     width: 100%;
-     padding: 10px;
+   }
+   
+   .input,
+   .select {
+     /* flex: 1; */
+     /* padding: 8px; */
      border: none;
-     border-bottom: 1px solid #ccc;
+     border-bottom: 1px solid #cccccc;
      outline: none;
-     font-family: inherit;
+     /* font-family: inherit;
      font-size: inherit;
-     font-weight: inherit;
-     color: inherit;
- }
- 
- .suggestionsContainer {
+     font-weight: inherit; */
+     color: var(--light-grey);
+     margin: 0;
+   }
+   
+   .suggestionsContainer {
      /* position: absolute; */
-     top: calc(100% + 4px);
+     top: calc(100% + 2px);
      z-index: 1;
      width: 100%;
-     background-color: #ffffff;
+     background-color: var(--yellow);
      border-radius: 4px;
      box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
-     border: 1px solid #e0e0e0;
- }
- 
- .suggestion {
+     /* border: 1px solid #e0e0e0; */
+     color: var(--light-grey);
+   }
+   
+   .suggestion {
      cursor: pointer;
      padding: 8px;
-     border-bottom: 1px solid #e0e0e0;
- }
- 
- .suggestionHighlighted {
-     background-color: #f5f5f5;
- }
- 
+     list-style-type: none;
+     /* border-bottom: 1px solid #e0e0e0; */
+   }
+   
+   .suggestionHighlighted {
+     color: var(--blue-btn-hover);
+   }
+   
+   /* .select {
+     margin-left: 16px;
+   }
+    */
