--- a/src/components/CarCard/CarCard.module.css
+++ b/src/components/CarCard/CarCard.module.css
@@ -1,5 +1,3 @@
-/* src/components/CarCard/CarCard.module.css */
-
 .carCard {
   display: flex;
   flex-direction: column;
@@ -11,23 +9,21 @@
   height: 268px;
   border-radius: 20px;
   object-fit: cover;
-  margin-bottom: 14px; 
+  margin-bottom: 14px;
 }
 
-
 button {
-  background-color: transparent; /* Фон кнопки прозорий */
-  border: none; /* Відсутність границі */
+  background-color: transparent;
+  border: none;
   cursor: pointer;
   display: flex;
   align-items: center;
 }
 
 .favorite,
-.notFavorite  {
-  color: var(--blue-btn); /* Колір тексту для улюбленої машини */
+.notFavorite {
+  color: var(--blue-btn);
 }
-
 
 /*  */
 
@@ -61,7 +57,7 @@ button {
   justify-content: space-between;
 }
 
- .learnMore {
+.learnMore {
   margin: 0 auto;
   padding: 10px 20px;
   font-size: 14px;
