--- a/src/components/CarList/CarList.module.css
+++ b/src/components/CarList/CarList.module.css
@@ -10,7 +10,7 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  margin-top: 20px; /* Зменшив значення, щоб було менше відстані між машинами і кнопкою */
+  margin-top: 20px; 
 }
 
 .loadMoreButton {
