--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -9,6 +9,7 @@
   --light-grey: rgb(134, 134, 134);
   --white-grey: #f5f5f5;
   --shadow: rgba(0, 0, 0, 0.1);
+  --light-grey-fav: rgb(208, 208, 208);
 }
 
 html {
